# simulator

./: Cargo.toml  Dockerfile  README.md  demo.json  local.json  local2.json
data/: hydrate.sh
runit/simulator/: run
src/: data.rs  main.rs  mqtt.rs  serializer.rs  simulator.rs  sysinfo.rs
