[package]
name = "simulator"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = { version = "0.4.35", features = ["serde"] }
log = "0.4.21"
rumqttc = "0.24.0"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
tokio = { version = "1.36.0", features = ["full"] }
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
